--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -91,7 +91,16 @@ body {
         transition: 0.3s;
     }
 }
-
+.checkbox {
+    &:hover {
+        cursor: pointer;
+    }
+    &-label {
+        &:hover {
+            cursor: pointer;
+        }
+    }
+}
 /*header-styles*/
 .logo-img {
     width: 200px;
@@ -598,9 +607,12 @@ body {
     &-img {
         &-bottom-row {
             margin-top: 10px;
+            //height: 100px;
+            //overflow: hidden;
             @include max-screen(lg) {
                 width: 363px;
                 margin: 10px auto 0;
+                height: 70px;
             }
             @include max-screen(sm) {
                 width: auto;
@@ -615,6 +627,7 @@ body {
     }
     &-small-item {
         padding: 0 5px;
+        overflow: hidden;
         @include max-screen(lg) {
             width: 111px;
             height: 70px;
@@ -625,6 +638,7 @@ body {
     }
     &-large-item {
         padding: 0 5px;
+        //height: 350px;
         @include max-screen(lg) {
         }
         @include max-screen(sm) {
@@ -663,6 +677,7 @@ body {
             padding-bottom: 32px;
             display: flex;
             justify-content: space-between;
+
             @include max-screen(lg) {
                 margin-top: 23px;
                 padding-bottom: 8px;
@@ -675,6 +690,10 @@ body {
         &-column {
             &-left {
                 width: 49%;
+                position: relative;
+                &:hover {
+                    cursor: pointer;
+                }
                 @include max-screen(lg) {
                     width: 49%;
                     }
@@ -791,6 +810,20 @@ body {
     @include max-screen(lg) {
         width: 48%;
     }
+}
+.play-img {
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    z-index: 5;
+    width: 52px;
+    height: 52px;
+    @include max-screen(lg) {
+        width: 36px;
+        height: 36px;
+    }
+
 }
 .review {
     &-wrapper {
@@ -1039,7 +1072,7 @@ body {
         width: 50%;
         background-image: url('../img/answer-girl.png');
         background-repeat: no-repeat;
-        margin-top: -150px;
+        margin-top: -144px;
         @include max-screen(lg) {
             width: 50%;
             background-size: 362px 457px;
@@ -1181,6 +1214,7 @@ body {
         background-color: #A18A6F;
         padding: 24px 37px 24px 32px;
         min-height: 108px;
+        margin-top: -4px;
         @include max-screen(lg) {
             font-size: 12px;
             line-height: 15px;
@@ -1221,6 +1255,19 @@ body {
             left: 108px;
         }
     }
+}
+.map {
+    height: 250px;
+    width: 370px;
+    @include max-screen(lg) {
+        height: 158px;
+        width: 236px;
+    }
+    @include max-screen(sm) {
+        height: 231px;
+        width: 345px;
+    }
+
 }
 /*block-map end*/
 
@@ -1476,6 +1523,9 @@ body {
     overflow: auto;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
+    &-map {
+
+    }
     &-content {
         background-color: #ffffff;
         padding: 60px 100px;
@@ -1488,6 +1538,31 @@ body {
         @include max-screen(sm) {
             padding: 60px 24px 82px;
         }
+    &-map {
+        padding: 0;
+        margin: 0 auto;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        &-iframe {
+            width: 100%;
+            height: 100%;
+            //position: absolute;
+            //top: 50%;
+            //transform: translate(0, -50%);
+            &-wrapper {
+                height: 600px;
+                position: relative;
+                @include max-screen(lg) {
+                    height: 400px;
+                }
+                @include max-screen(sm) {
+                    height: 200px;
+                }
+            }
+        }
+    }
     }
     &-text {
         &-write {
@@ -1727,11 +1802,26 @@ body {
     top: 30px;
     font-size: 28px;
     font-weight: bold;
+    &:hover {
+        cursor: pointer;
+    }
 
     @include max-screen(lg) {
         right: 10px;
         top: 10px;
     }
+    &-map {
+        //display: inline-block;
+        //padding: 3px;
+        ////background-color: rgba(0,0,0,0.2);
+        //position: fixed;
+        //right: -45px;
+        //top: 0;
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
 }
 .close:hover,
 .close:focus {
