--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -101,6 +101,7 @@ body {
         }
     }
 }
+
 /*header-styles*/
 .logo-img {
     width: 200px;
@@ -574,7 +575,7 @@ body {
         width: 50%;
         margin: 0 -5px;
         .slick-dots {
-            padding: 5px 0;
+            padding: 24px 0 0 0;
         }
         @include max-screen(lg) {
             width: 100%;
@@ -607,8 +608,6 @@ body {
     &-img {
         &-bottom-row {
             margin-top: 10px;
-            //height: 100px;
-            //overflow: hidden;
             @include max-screen(lg) {
                 width: 363px;
                 margin: 10px auto 0;
@@ -626,23 +625,43 @@ body {
         }
     }
     &-small-item {
-        padding: 0 5px;
-        overflow: hidden;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
         @include max-screen(lg) {
-            width: 111px;
-            height: 70px;
         }
         @include max-screen(sm) {
-            padding: 0 7.5px;
         }
+        &-wrapper {
+            padding: 0 5px;
+            height: 100px;
+            overflow: hidden;
+            @include max-screen(lg) {
+                height: 70px;
+            }
+            @include max-screen(sm) {
+                padding: 0 7.5px;
+            }
+        }
+
     }
     &-large-item {
-        padding: 0 5px;
-        //height: 350px;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
         @include max-screen(lg) {
         }
         @include max-screen(sm) {
-            padding: 0 7.5px;
+        }
+        &-wrapper {
+            padding: 0 5px;
+            height: 350px;
+            overflow: hidden;
+
+            @include max-screen(sm) {
+                height: 250px;
+                padding: 0 7.5px;
+            }
         }
     }
 }
@@ -1259,6 +1278,7 @@ body {
 .map {
     height: 250px;
     width: 370px;
+    filter: grayscale(100%);
     @include max-screen(lg) {
         height: 158px;
         width: 236px;
@@ -1963,3 +1983,9 @@ body {
 
 
 
+.invalid {
+    border: 1px solid red;
+}
+.valid {
+    background: none;
+}
